--- a/src/tetris.html
+++ b/src/tetris.html
@@ -1,22 +1,19 @@
-<?php
-    include_once 'navbar.php';
-?>
+
 
 <!DOCTYPE html>
 <html>
     <head>
         <title>Tetris</title>
         <link rel="stylesheet" href="style.css">
-        <script type="text/javascript" src="tetris.js"></script>
     </head>
     <body>
         <div class="main">
             <div class="welcome">
                 <h1>Tetris Game Screen</h1>
             </div>
-            <div class="tetris">
+            <div class="tetris-bg">
                 <img src="../img/tetris-grid-bg.png" id="grid">
-                <button type="button" id="start">Start</button>
+                <button type="button" id="start">Start the game</button>
             </div>
         </div>
     </body>
